Ajustes Dao e telas